stable/traefik/routes/traefik-lb.yaml
# ------------------- Need change it ------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-route
spec:
  rules:
  - host: traefik-nginx.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: http
  - host: jenkins.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-svc
          servicePort: 8080
